<resources>
    <string name="app_name">artPhoto</string>
    <string name="topText">Bestill innrammede bilder</string>
    <string name="chooseImage">VELG BILDE</string>
    <string name="amountImages">Antall valgte bilder: %1$d</string>
    <string name="amount_images">Antall valgte bilder: 0</string>
    <string name="cart">Handlekurv:</string>
    <string name="checkout">SEND BESTILLING</string>
    <string name="authors_name_static">Ola Nordmann</string>
    <string name="treramme">Treramme</string>
    <string name="s_lvramme">Sølvramme</string>
    <string name="gullramme">Gullramme</string>
    <string name="lite">Lite</string>
    <string name="medium">Medium</string>
    <string name="stort">Stort</string>
    <string name="legg_i_handlekurv">LEGG I HANDLEKURV</string>
    <string name="forrige">FORRIGE</string>
    <string name="sølvramme">Sølvramme</string>
    <string name="title">Title</string>
    <string name="size">Size</string>
    <string name="frame">Frame</string>
    <string name="price">Price</string>
    <string name="total_price">Totalpris: %1$d</string>
    <string name="totalPrice">Totalpris: 0.0</string>
    <string name="choosing_title">Velg rammetype og bildestørrelse</string>
    <string name="title_price">Pris: kr %1$d</string>
    <string name="title_size">Størrelse: %1$s</string>
    <string name="title_frame">Rammetype: %1$s</string>
    <string name="price_amount_total_price">Pris per stk.: kr %1$d, Antall: %2$d, Totalt: kr %3$d</string>
    <string name="choose_frame_toast">Vennligst velg en ramme.</string>
    <string name="choose_size_toast">Vennligst velg en størrelse.</string>
    <string name="choose_amount_toast">Legg til antall bilder.</string>
    <string name="invalid_quantity_toast">Vennligst velg et antall større enn 0.</string>
    <string name="choose_picture">Vennligst velg bilder!</string>
    <string name="cart_is_empty">Handlekurv er tom.</string>
    <string name="choose_item_to_delete">Velg elementer som skal slettes.</string>
    <string name="thanks_for_order">Takk for din bestilling!</string>
    <string name="delete_button">Slett</string>
    <string name="reset_button">Nulstill</string>
    <string name="amount_photos">Antall</string>
</resources>